--- a/tests/test_brython_standalone.html
+++ b/tests/test_brython_standalone.html
@@ -14246,7 +14246,8 @@ class Printer(Monad):
     
 def run(fn):
     import inspect
-    if inspect.getmodule(fn.__module__).__name__ in ['__main__', 'builtins']:
+    mod = inspect.getmodule(fn.__module__)
+    if fn.__module__ == '__main__' or mod and mod.__name__ in ['__main__', 'builtins']:
         fn()
         
 # sample test
