--- a/tests/test_brython_standalone.html
+++ b/tests/test_brython_standalone.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <link rel="shortcut icon" type="image/jpg" href="data:"/>
+<link rel="icon" type="image/jpg" href="data:"/>
 <script>
 // brython.js brython.info
 // version [3, 9, 0, 'final', 0]
