Add tests for Monad type and simplify test_reader and add mypy checking

--- a/tests/test_brython_standalone.html
+++ b/tests/test_brython_standalone.html
@@ -14176,11 +14176,13 @@ return obj}})(__BRYTHON__)
 </head>
 <body onload="brython()">
 <script type="text/python">
+# begin simplemonads
+
 "Easy to use monads (containers) that improve the quality of your python code."
 
 
 try:
-    from typing import Callable, Protocol, Union
+    #skip for browser: from typing import Callable, Protocol, Union, Any, List, TypeVar, Generic
 
     class Monad(Protocol):
         "The base protocol that other Monads implement."
@@ -14188,8 +14190,14 @@ try:
         def bind(self, fn: "Callable") -> "Monad":
             "Perform the monadic action on the argument."
 
-        def match(self, items: dict) -> "Monad":
+        def __add__(self, fn: "Callable") -> "Monad":
+            "Shortcut for `bind`"
+
+        def match(self, items: dict) -> "Any":
             "Pattern match the `items` dictionary with `self._value` and return a monad."
+
+        def __or__(self, items: dict) -> "Any":
+            "Shortcut for `match`"
 
 
 except:
@@ -14203,7 +14211,13 @@ class Printer:
     def bind(self, fn: "Callable") -> "Printer":
         return Printer(fn(self._value))
 
+    def __add__(self, fn: "Callable") -> "Printer":
+        return self.bind(fn)
+
     def match(self, items: dict) -> "Printer":
+        return Printer(self._value)
+
+    def __or__(self, items: dict) -> "Printer":
         return Printer(self._value)
 
     def __getattr__(self, name: str):
@@ -14218,25 +14232,27 @@ class BaseMonad:
         "Bind lifts the value from self._value into the function argument according to the laws of this monad."
         return self
 
-    def match(self, items={}) -> "Monad":
+    def __add__(self, fn: "Callable") -> "Monad":
+        "Calls `bind` class method."
+        return self.bind(fn)
+
+    def match(self, items={}) -> "Any":
         "Pattern match the `items` dictionary with `self._value` and return a monad."
         keys = list(items.keys())
         locate = type(self)
         if not items:
             print("DEBUG: " + str(self._value))
         if locate in keys:
+            if locate is Just and self._value is None:
+                return Nothing()
             return items[locate](self._value)
         if _ in keys:
             return items[_](self._value)
         return self
 
-    def __or__(self, items={}) -> "Monad":
+    def __or__(self, items={}) -> "Any":
         "Calls `match` class method."
         return self.match(items)
-
-    def __add__(self, fn: "Callable") -> "Monad":
-        "Calls `bind` class method."
-        return self.bind(fn)
 
     def __str__(self):
         return str(type(self)) + " " + str(self._value)
@@ -14260,11 +14276,11 @@ class Success(BaseMonad):
             return Failure("Error: " + str(ex))
 
 
-class List(BaseMonad):
-    _value: list
+class Lists(BaseMonad):
+    _value: "List[object]" = []
 
-    def bind(self, fn: "Callable") -> "List":
-        return List(list(map(fn, self._value)))
+    def bind(self, fn: "Callable") -> "Monad":
+        return Lists(list(map(fn, self._value)))
 
 
 class Nothing(BaseMonad):
@@ -14273,14 +14289,12 @@ class Nothing(BaseMonad):
 
 
 class Just(BaseMonad):
-    def bind(self, fn: "Callable") -> "Just":
-        return Just(fn(self._value))
+    def bind(self, fn: "Callable") -> "Union[Just,Nothing]":
+        return Nothing() if self._value is None else Just(fn(self._value))
 
 
 class Reader(BaseMonad):
     "Inject dependencies into the self._value function when binding to the monad."
-
-    _value: "Callable"
 
     def bind(self, fn: "Callable") -> "Reader":
         return self._value(fn())
@@ -14312,12 +14326,9 @@ def run(fn: "Callable") -> "Callable":
 
     return fn
 
-
 # begin test script
 
-
 try:
-    from typing import Callable, Protocol, Union, Any
 
     class Deps(Protocol):
         "Dependencies for your application"
@@ -14325,11 +14336,18 @@ try:
         def popup(self, msg) -> None:
             "Display a popup with the specified message."
 
-    import PySimpleGUI
-
-
 except:
     pass
+
+
+def make(make_gui: "t.Callable[[],t.Any]") -> "t.Callable[[],Deps]":
+    gui = make_gui()
+
+    class GuiDeps:
+        def popup(self, x: str):
+            gui.Popup(x)
+
+    return GuiDeps
 
 
 def app(divide_by_zero: bool = False) -> Reader:
@@ -14341,7 +14359,7 @@ def app(divide_by_zero: bool = False) -> Reader:
     if divide_by_zero:
         result += lambda x: x + (lambda x: x / 0)
 
-    def effect(deps: "Deps") -> "Union[Success, Failure]":
+    def effect(deps: "Deps") -> "Monad":
         msg = "Answer to the Universe: "
         err = "Whoops, an error happened: "
         result | {
